--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ getopts = "0.2.21"
 winreg = "0.52"
 whoami = "1.5.1"
 
+[dependencies.winapi]
+version = "0.3.0"
+features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"]
+
 [profile.release]
 strip = true
 panic = "abort"
